Embedded c course/unit 3/lesson 1/assignment 2/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:42:38 **** Build of configuration Debug for project toggle_led ****
make -j8 all 
arm-none-eabi-gcc -mcpu=cortex-m3 -g3 -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f103c6tx.d" -MT"Startup/startup_stm32f103c6tx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Startup/startup_stm32f103c6tx.o" "../Startup/startup_stm32f103c6tx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/sysmem.o"
../Src/main.c:41:28: error: initializer element is not constant
 volatile R_ODR_t * R_ODR = (volatile R_ODR_t *) GPIOA_ODR ;
                            ^
make: *** [Src/subdir.mk:24: Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.
20:45:27 **** Incremental Build of configuration Debug for project toggle_led ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "toggle_led.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\courses\embedded system\unit 3\lesson 1\assignment\assignment 2\toggle_led\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="toggle_led.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: toggle_led.elf
 
arm-none-eabi-size   toggle_led.elf 
arm-none-eabi-objdump -h -S  toggle_led.elf  > "toggle_led.list"
arm-none-eabi-objcopy  -O ihex  toggle_led.elf  "toggle_led.hex"
arm-none-eabi-objcopy  -O binary  toggle_led.elf  "toggle_led.bin"
   text	   data	    bss	    dec	    hex	filename
    672	     12	   1564	   2248	    8c8	toggle_led.elf
Finished building: default.size.stdout
 
Finished building: toggle_led.list
Finished building: toggle_led.hex
Finished building: toggle_led.bin
 
 
 
20:46:41 **** Incremental Build of configuration Debug for project toggle_led ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c:41:27: error: initializer element is not constant
 volatile R_ODR_t* R_ODR = (volatile R_ODR_t*) (GPIOA_ODR) ;
                           ^
make: *** [Src/subdir.mk:24: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
20:47:00 **** Incremental Build of configuration Debug for project toggle_led ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "toggle_led.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\courses\embedded system\unit 3\lesson 1\assignment\assignment 2\toggle_led\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="toggle_led.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: toggle_led.elf
 
arm-none-eabi-objdump -h -S  toggle_led.elf  > "toggle_led.list"
arm-none-eabi-objcopy  -O ihex  toggle_led.elf  "toggle_led.hex"
arm-none-eabi-objcopy  -O binary  toggle_led.elf  "toggle_led.bin"
arm-none-eabi-size   toggle_led.elf 
   text	   data	    bss	    dec	    hex	filename
    672	     12	   1564	   2248	    8c8	toggle_led.elf
Finished building: default.size.stdout
 
Finished building: toggle_led.bin
Finished building: toggle_led.hex
 
Finished building: toggle_led.list
 
 
